[gd_scene load_steps=16 format=2]

[ext_resource path="res://enemies/Goblin.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/damage_bar.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/health_bar.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/animations/goblin/goblin_idle4.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/animations/goblin/goblin_idle2.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/animations/goblin/goblin_idle5.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/animations/goblin/goblin_idle3.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/animations/goblin/goblin_idle1.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/bow sound_mixdown.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/Cyberwave Orchestra - Weapons of War - Bow Pulling Back Stretch .wav" type="AudioStream" id=10]
[ext_resource path="res://assets/weapon/bow.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 8.06226

[sub_resource type="Animation" id=3]
resource_name = "ShootArrow"
tracks/0/type = "value"
tracks/0/path = NodePath("Bow:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -1 ), Vector2( -6, -1 ), Vector2( -6, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bow:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -34.0964 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "sheathe"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Bow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[node name="Goblin" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -10.0
margin_right = 32.0
margin_bottom = 30.0
min_value = 1.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Timer3" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShootArrow = SubResource( 3 )
anims/sheathe = SubResource( 4 )

[node name="Bow" type="Sprite" parent="."]
position = Vector2( -4, -1 )
texture = ExtResource( 11 )

[node name="shootArrowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.778

[node name="pullBowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
pitch_scale = 0.7

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
